--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -368,6 +368,9 @@ allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:15::1;
+allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
