--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -648,6 +648,7 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
+allow 198.167.206.230;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -864,7 +865,6 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -1026,6 +1026,7 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:6f8:2020:206:b::230;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1417,6 +1418,7 @@ allow 2a14:7c2:10ec::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
+allow 31.42.185.136;
 allow 35.0.127.52;
 allow 35.91.154.39;
 allow 37.114.41.119;
@@ -1527,7 +1529,6 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
