--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -1,5 +1,6 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
+allow 102.130.127.117;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
@@ -879,6 +880,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
