--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -323,12 +323,17 @@ allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
 allow 185.220.101.100;
+allow 185.220.101.101;
 allow 185.220.101.102;
 allow 185.220.101.103;
+allow 185.220.101.104;
 allow 185.220.101.105;
+allow 185.220.101.106;
+allow 185.220.101.107;
 allow 185.220.101.108;
 allow 185.220.101.109;
 allow 185.220.101.11;
+allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.129;
 allow 185.220.101.13;
@@ -476,6 +481,8 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
+allow 185.220.101.96;
+allow 185.220.101.97;
 allow 185.220.101.98;
 allow 185.220.101.99;
 allow 185.220.103.4;
@@ -852,6 +859,7 @@ allow 23.137.253.108;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -885,6 +893,7 @@ allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.94.211.25;
+allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
@@ -1310,11 +1319,18 @@ allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
 allow 2a0b:f4c2:4::103;
+allow 2a0b:f4c2:4::104;
 allow 2a0b:f4c2:4::105;
+allow 2a0b:f4c2:4::106;
+allow 2a0b:f4c2:4::107;
 allow 2a0b:f4c2:4::108;
 allow 2a0b:f4c2:4::109;
+allow 2a0b:f4c2:4::110;
+allow 2a0b:f4c2:4::96;
+allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
