--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -323,12 +323,17 @@ deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
 deny 185.220.101.100;
+deny 185.220.101.101;
 deny 185.220.101.102;
 deny 185.220.101.103;
+deny 185.220.101.104;
 deny 185.220.101.105;
+deny 185.220.101.106;
+deny 185.220.101.107;
 deny 185.220.101.108;
 deny 185.220.101.109;
 deny 185.220.101.11;
+deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.129;
 deny 185.220.101.13;
@@ -476,6 +481,8 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
+deny 185.220.101.96;
+deny 185.220.101.97;
 deny 185.220.101.98;
 deny 185.220.101.99;
 deny 185.220.103.4;
@@ -852,6 +859,7 @@ deny 23.137.253.108;
 deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
+deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
@@ -885,6 +893,7 @@ deny 23.155.24.4;
 deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.94.211.25;
+deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8905::f03c:95ff:fe67:ec03;
 deny 2400:8907::f03c:95ff:fe79:8c79;
@@ -1310,11 +1319,18 @@ deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
 deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
 deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
 deny 2a0b:f4c2:4::108;
 deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
