--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -323,12 +323,17 @@ set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
 set_real_ip_from 185.220.101.100;
+set_real_ip_from 185.220.101.101;
 set_real_ip_from 185.220.101.102;
 set_real_ip_from 185.220.101.103;
+set_real_ip_from 185.220.101.104;
 set_real_ip_from 185.220.101.105;
+set_real_ip_from 185.220.101.106;
+set_real_ip_from 185.220.101.107;
 set_real_ip_from 185.220.101.108;
 set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
+set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.129;
 set_real_ip_from 185.220.101.13;
@@ -476,6 +481,8 @@ set_real_ip_from 185.220.101.88;
 set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
 set_real_ip_from 185.220.101.90;
+set_real_ip_from 185.220.101.96;
+set_real_ip_from 185.220.101.97;
 set_real_ip_from 185.220.101.98;
 set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
@@ -739,6 +746,7 @@ set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
+set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
