--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -279,7 +279,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -302,7 +301,6 @@ allow 185.195.71.8;
 allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
-allow 185.208.158.200;
 allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
@@ -675,6 +673,7 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.58.107.53;
+allow 198.7.112.99;
 allow 198.96.155.3;
 allow 198.98.48.33;
 allow 198.98.48.35;
@@ -887,7 +886,6 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -905,6 +903,7 @@ allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
+allow 2.58.56.233;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
@@ -1403,11 +1402,11 @@ allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:1::c758:3168;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
+allow 2a12:a800:1:1:2:58:56:233;
 allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:2:1:185:241:208:115;
@@ -1692,7 +1691,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
-allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
