--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -615,11 +615,11 @@ deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:1fc0:1::c758:3168;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
+deny 2a12:a800:1:1:2:58:56:233;
 deny 2a12:a800:1:1:2:58:56:35;
 deny 2a12:a800:1:1:2:58:56:43;
 deny 2a12:a800:2:1:185:241:208:115;
